# mlops-task

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd-dev-staging.yml  cd-prod.yml  ci-pr.yml
__MACOSX/: ._pyproject.toml
__MACOSX/starter_pack/: ._api_contract.yaml
api/: Dockerfile  app.py
api/schemas/: __init__.py  prediction_schemas.py
api/service/: model_predictions.py
api/utils/: __init__.py  config.py
api/views/: __init__.py  prediction_views.py
docs/: ManyPets Solution Design.docx  monitoring_specifications.md  release_rollback.md
ml/: Dockerfile
ml/training/: train.py
ml/training/claims_outlier/: train.py
starter_pack/: api_contract.yaml  train_leakage_model.ipynb
starter_pack/data/: leakage_data.csv  sample_payload.json
terraform/envs/dev/: main.tf  terraform.tfvars
terraform/envs/prod/: main.tf  terraform.tfvars
terraform/envs/staging/: main.tf  terraform.tfvars
terraform/modules/artifacts_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/big_query/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_scheduler/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_storage/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/pub_sub/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets_manager/: main.tf  outputs.tf  variables.tf
terraform/modules/vertex_AI/: main.tf  outputs.tf  variables.tf
